issue#2  replace deprecated constructor with static valueOf()